# real_time_data_pipeline

./: .gitignore  CMakeLists.txt  command  data.output.txt  flow.txt  readme.md
config/: config.json
data/: input.txt  output.db  output.txt
include/: APIDataSource.hpp  CommandLineParser.hpp  ConfigManager.hpp  DataProcessor.hpp  DataSource.hpp  DataSourceFactory.hpp  DatabaseWriter.hpp  FileDataSource.hpp  Logger.hpp  MetricsCollector.hpp  MetricsServer.hpp  OutputWriter.hpp  ProcessingStrategy.hpp  RingBufferQueue.hpp  SignalHandler.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  TrimAndTagStrategy.hpp  UpperCaseStrategy.hpp  Utils.hpp  WebSocketClient.hpp
project_support/: echo-server.js
src/: APIDataSource.cpp  CommandLineParser.cpp  ConfigManager.cpp  DataProcessor.cpp  DataSourceFactory.cpp  DatabaseWriter.cpp  FileDataSource.cpp  Logger.cpp  MetricsCollector.cpp  MetricsServer.cpp  OutputWriter.cpp  RingBufferQueue.cpp  SignalHandler.cpp  ThreadPool.cpp  TrimAndTagStrategy.cpp  UpperCaseStrategy.cpp  WebSocketClient.cpp  main.cpp
tests/: test_APIDataSource.cpp  test_DataProcessor.cpp  test_FileDataSource.cpp  test_FullPipeline_File.cpp  test_Logger.cpp  test_RingBufferQueue.cpp  test_config.json
tests/mock_api_data/: mock_data.json
